# agenda-django

./: .gitignore  README.md  pyproject.toml
contacts/: admin.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_description_alter_contact_email.py  0003_rename_firt_name_contact_first_name.py  0004_contact_picture_contact_show.py  0005_category_alter_contact_email_contact_category.py  0006_alter_category_options_contact_owner.py
contacts/templates/contacts/: contact.html  create.html  index.html
contacts/views/: __init__.py  contact_forms.py  contact_view.py  contact_views.py
core/: settings.py  urls.py
templates/global/: base.html  header.html  paginator.html
templates/static/contacts/css/: styles.css
templates/static/global/css/: styles.css
