[tool.poetry]
name = "agenda-django"
version = "0.1.0"
description = ""
authors = ["Walber Vaz da Silva <wvs.walber@gmail.com>"]
readme = "README.md"
packages = [{include = "agenda_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-decouple = "^3.8"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
