[tool.poetry]
name = "agenda-django"
version = "0.1.0"
description = ""
authors = ["Walber Vaz da Silva <wvs.walber@gmail.com>"]
readme = "README.md"
packages = [{include = "agenda-django", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.11"
python-decouple = "^3.8"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
faker = "^19.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
